include $(top_srcdir)/Makefile.am.common

icon32dir = $(datadir)/icons/hicolor/32x32/apps
iconscaledir = $(datadir)/icons/hicolor/scalable/apps
desktopdir = $(datadir)/applications

if GTK
dist_icon32_DATA = ettercap.xpm
dist_iconscale_DATA = ettercap.svg
dist_desktop_DATA = ettercap.desktop
endif

# vim:ts=4:noexpandtab
