include $(top_srcdir)/Makefile.am.common

pkgdata_DATA = etter.dns \
               etter.fields \
               etter.filter \
               etter.filter.examples \
               etter.filter.kill \
               etter.filter.ssh \
               etter.finger.mac \
               etter.finger.os \
               etter.mime \
               etter.services \
               etter.ssl.crt \
               etterfilter.cnt \
               etterfilter.tbl \
               etterlog.dtd

if GTK
pkgdata_DATA += ettercap.png
endif

sysconf_DATA = etter.conf

EXTRA_DIST = etter*
