include $(top_srcdir)/Makefile.am.common

pkglib_LTLIBRARIES = ec_finger_submit.la

ec_finger_submit_la_CFLAGS = @PL_CFLAGS@

ec_finger_submit_la_SOURCES = finger_submit.c

ec_finger_submit_la_LDFLAGS = @PL_LDFLAGS@ -module -avoid-version

LIBS =
ec_finger_submit_la_LIBS = 

# vim:ts=4:noexpandtab

