include $(top_srcdir)/Makefile.am.common

pkglib_LTLIBRARIES = ec_search_promisc.la

ec_search_promisc_la_CFLAGS = @EC_CFLAGS@

ec_search_promisc_la_SOURCES = search_promisc.c

ec_search_promisc_la_LDFLAGS = @PL_LDFLAGS@ -module -avoid-version

LIBS =
ec_search_promisc_la_LIBS = 

# vim:ts=4:noexpandtab

