include $(top_srcdir)/Makefile.am.common

noinst_HEADERS = ec_text.h

noinst_LIBRARIES = libec_text.a

libec_text_a_CFLAGS = @EC_CFLAGS@ -I.

libec_text_a_SOURCES =  ec_text.c \
                        ec_text_conn.c \
                        ec_text_display.c \
                        ec_text_plugin.c \
                        ec_text_profile.c

# vim:ts=4:noexpandtab
